fix(style): Improve the navigation style on narrow viewports

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -58,6 +58,24 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+
+        container-type: inline-size;
+
+        & > * {
+          width: 100%;
+          max-height: 100%;
+
+          overflow-y: auto;
+        }
+
+        @container (width < 12rem) {
+          :where(h2, h3, h4) {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 100px;
+            overflow: hidden;
+          }
+        }
       }
 
       & > section {
